--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,3 +29,26 @@ jobs:
       - name: Run tests
         run: |
           pytest _test.py
+
+  code-quality:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.11'
+
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 black
+
+    - name: Run Flake8 (Python Linter)
+      run: flake8 .
+
+    - name: Check Code Formatting with Black
+      run: black --check .
