--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,5 +50,8 @@ jobs:
     - name: Run Flake8 (Python Linter)
       run: flake8 .
 
+    - name: Format code with Black
+      run: black .
+
     - name: Check Code Formatting with Black
       run: black --check .
